# GDLauncher-Carbon

./: .editorconfig  .gitignore  .gitmodules  .npmrc  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.sh  bundlewatch.config.js  cargo.toml  clear_db_caches.sql  crowdin.yml  db.db  electron-builder.config.js  entitlements.mac.bundles.plist  flake.nix  iridium_patchfix.js  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
core/: Cargo.toml  go.mod  index.d.ts  index.js  index.ts  main.go  package.json  tsconfig.json
core/scripts/: build.mjs  dev.mjs  targetMapping.mjs
core/src/: lib.rs
core/src/accounts/: auth.rs  mod.rs
core/src/component/: error.rs  mod.rs
core/src/instance/: mod.rs
core/src/minecraft/: mod.rs
crates/carbon_app/: Cargo.toml  build.rs  package.json
crates/carbon_app/fixtures/mc_version_manifests/: 1.12.2.json  1.13.json  1.16.1.json  1.18.1.json  a1.0.14.json  b1.1_02.json  b1.8.1.json  rd-132211.json
crates/carbon_app/migrations/: 20240120134904_init.sql  20240123180711_launcher_action_on_game_launch_game_resolution.sql  20240204033019_add_instances_settings.sql  20240206064454_downloaddeps.sql  20240206225900_add_hooks.sql  20240403131726_add_show_app_close_warning_option.sql  20240508002650_rename_all_columns_to_snake_case.sql
crates/carbon_app/prisma/: schema.prisma
crates/carbon_app/src/: app_version.rs  base_api_override.rs  cache_middleware.rs  error.rs  generate_rspc_ts_bindings.rs  iridium_client.rs  lib.rs  livenesstracker.rs  logger.rs  main.rs  once_send.rs  platform.rs  pprocess_keepalive.rs  reaper.rs  reqwest_cache.rs  runtime_directory.rs  runtime_path_override.rs  translation.rs  try_path_fmt.rs
crates/carbon_app/src/api/: account.rs  configuration.rs  dev.rs  instance.rs  java.rs  keys.rs  mc.rs  metrics.rs  mod.rs  modplatforms.rs  queue.rs  router.rs  settings.rs  system_info.rs  translation.rs  vtask.rs
crates/carbon_app/src/app/: mod.rs  representation.rs
crates/carbon_app/src/domain/: account.rs  java.rs  maven.rs  metrics.rs  mod.rs  runtime_path.rs  url.rs  vtask.rs
crates/carbon_app/src/error/: json.rs  mod.rs  request.rs  sentry.rs
crates/carbon_app/src/managers/: cache_manager.rs  download.rs  mod.rs  prisma_client.rs  queue.rs  representation.rs  reqwest_cached_client.rs  rich_presence.rs  system_info.rs  vqueue.rs  vtask.rs
crates/carbon_app/src/queue/: mod.rs
crates/carbon_app/src/util/: mod.rs  nwalkdir.rs
crates/carbon_bindings/: Cargo.toml  package.json
crates/carbon_bindings/prisma/: schema.prisma
crates/carbon_bindings/src/: lib.rs
crates/carbon_bindings/src/api/: app.rs  configuration.rs  java.rs  mc.rs  mod.rs  persistence.rs
crates/carbon_bindings/src/app/: mod.rs  representation.rs
crates/carbon_bindings/tests/: lib.rs
crates/carbon_compression/: Cargo.toml  package.json
crates/carbon_compression/fixtures/: compressed.tar  compressed.txt
crates/carbon_compression/src/: lib.rs
crates/carbon_core/: Cargo.toml  package.json
crates/carbon_domain/: Cargo.toml  package.json
crates/carbon_domain/fixtures/instance_example/: .conf.json
crates/carbon_domain/src/: error.rs  lib.rs  translation.rs  vqueue.rs  vtask.rs
crates/carbon_domain/src/account/: mod.rs
crates/carbon_domain/src/app/: configuration.rs  mod.rs
crates/carbon_domain/src/instance/: configuration.rs  delete.rs  mod.rs  scan.rs  tests.rs
crates/carbon_domain/src/maven/: mod.rs
crates/carbon_domain/src/minecraft/: assets.rs  manifest.rs  mod.rs  version.rs
crates/carbon_domain/src/minecraft_mod/: mod.rs
crates/carbon_domain/src/minecraft_package/: configuration.rs  mod.rs
crates/carbon_domain/src/modloader/: mod.rs
crates/carbon_java_manager/: Cargo.toml  package.json
crates/carbon_java_manager/src/: constants.rs  discovery.rs  error.rs  lib.rs  mc_java.rs  utils.rs
crates/carbon_java_manager/src/auto_setup/: adoptopenjdk.rs  mod.rs  mojang.rs  mojang_runtime.rs
crates/carbon_jre_manager/: Cargo.toml  package.json
crates/carbon_jre_manager/src/: auto_setup.rs  checker.rs  discovery.rs  downloader.rs  error.rs  lib.rs  mc_java.rs  utils.rs
crates/carbon_microsoft_auth/: Cargo.toml  package.json
crates/carbon_microsoft_auth/src/: lib.rs
crates/carbon_minecraft/: Cargo.toml  build.rs  package.json
crates/carbon_minecraft/prisma/: dev.db  schema.prisma
crates/carbon_minecraft/src/: db.rs  instance.rs  lib.rs  net.rs
crates/carbon_minecraft/src/app/: app_configuration.rs  configuration.rs  mod.rs
crates/carbon_minecraft/src/instance/: configuration.rs  delete.rs  error.rs  instances_scan.rs  mod.rs  scan.rs  tests.rs  write.rs
crates/carbon_minecraft/src/mc/: assets.rs  meta.rs  mod.rs  version.rs
crates/carbon_minecraft/src/minecraft/: assets.rs  meta.rs  mod.rs  version.rs
crates/carbon_minecraft/src/minecraft_mod/: mod.rs
crates/carbon_minecraft/tests/: lib.rs
crates/carbon_net/: Cargo.toml  package.json
crates/carbon_net/src/: error.rs  lib.rs
crates/carbon_repo/: Cargo.toml
crates/carbon_repo/src/: account.rs  active_downloads.rs  app_configuration.rs  assets_meta_cache.rs  curseforge_mod_cache.rs  curseforge_mod_image_cache.rs  curseforge_modpack_cache.rs  curseforge_modpack_image_cache.rs  http_cache.rs  instance.rs  instance_group.rs  java.rs  java_profile.rs  lib.rs  local_mod_image_cache.rs  lwjgl_meta_cache.rs  mod_file_cache.rs  mod_metadata.rs  modrinth_mod_cache.rs  modrinth_mod_image_cache.rs  modrinth_modpack_cache.rs  modrinth_modpack_image_cache.rs  partial_version_info_cache.rs  skin.rs  version_info_cache.rs
crates/carbon_scheduler/: Cargo.toml
crates/carbon_scheduler/src/: lib.rs
crates/carbon_vtask/: Cargo.toml
crates/carbon_vtask/src/: lib.rs
crates/java/: Cargo.toml  package.json
crates/java/src/: checker.rs  downloader.rs  lib.rs
crates/minecraft/: Cargo.toml  package.json
crates/minecraft/src/: component.rs  instance.rs  lib.rs  net.rs
crates/minecraft/src/mc/: assets.rs  (+3 more)
crates/prisma-cli/: Cargo.toml  package.json
crates/prisma-cli/src/: main.rs
(+472 files in other folders)
