[workspace]
members = ["crates/*"]
resolver = "2"
exclude = ["crates/iridium"]

[profile.release]
split-debuginfo = "unpacked"

[profile.production]
inherits = "release"
debug = 2
codegen-units = 1
lto = true
opt-level = "s"
split-debuginfo = "unpacked"

[profile.debug-production]
inherits = "release"
debug = 2
codegen-units = 16
opt-level = "s"
incremental = true

[workspace.dependencies]
anyhow = { version = "1.0.51", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.61"
axum = "0.6.2"
chrono = "0.4.23"
derive_more = "0.99.17"
openssl = { version = "0.10", features = [
  "vendored",
] } # required to vendor openssl for steam deck
directories = "4.0.1"
dotenvy = "0.15.6"
flate2 = "1.0.25"
fs_extra = "1.3.0"
futures = "0.3.25"
httpdate = "1.0.2"
hyper = "0.14.25"
itertools = "0.10.5"
image = { version = "0.24.5" }
jsonwebtoken = "8.2.0"
# libc = "0.2"
md-5 = "0.10.5"
murmurhash32 = { git = "https://github.com/gorilla-devs/murmurhash32", rev = "4dfdc49b727581bbdcad4a2315452a2c28db6093" }
nom = "7"
num_cpus = "1.16.0"
opener = "0.6.1"
parking_lot = "0.12.1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "f71ad9122537c4ed29bf496a4a643947a5fe9aef", features = [
  "sqlite-create-many",
  "sqlite",
  "migrations",
], default_features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "f71ad9122537c4ed29bf496a4a643947a5fe9aef", features = [
  "sqlite-create-many",
  "sqlite",
  "migrations",
], default_features = false }
rayon = "1.8.1"
regex = "1.7.0"
const_format = "0.2.32"
reqwest = { version = "0.11.13", default-features = false, features = [
  "json",
  "blocking",
  "stream",
] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
rspc = { git = "https://github.com/oscartbeaumont/rspc", rev = "60a4fa93187c20bc5cb565cc6ee30b2f0903840e" }
serde = "1.0.147"
serde_json = "1.0.89"
daedalus = { git = "https://github.com/gorilla-devs/daedalus", rev = "9655309b896629c18fb09c90402bc2cefee59075" }
sha1 = "0.10.5"
sha2 = "0.10.6"
tar = "0.4.38"
strum_macros = "0.24.3"
strum = "0.24.0"
thiserror = "1.0.38"
task-local-extensions = "0.1.4"
tokio = "1.25.0"
tokio-stream = "0.1.11"
dunce = "1.0.4"
toml = "0.7.3"
tower-http = "0.3.4"
hex = "0.4"
tracing = "0.1.37"
walkdir = "2.3"
tracing-subscriber = { version = "0.3.17", features = ["ansi", "env-filter"] }
tracing-appender = "0.2.2"
# tracing-forest = { version = "0.1.5", features = [
#   "smallvec",
#   "chrono",
#   "tokio",
#   "serde",
#   "env-filter",
# ] }
trash = "3.0.0"
uuid = "1.2.2"
winreg = "0.10.1"
zip = "0.6.3"
tempdir = "0.3.7"
sentry = { version = "0.31.6", features = ["anyhow"] }
syn = "2.0.11"
quote = "1.0.26"
url = "2.3.1"
serde_repr = "0.1"
sysinfo = "0.29.0"
serde_qs = "0.12"
markdown = "1.0.0-alpha.11"
ring = "0.16.20"

# dev dependencies
assert2 = "0.3.11"
flowtest = "0.1.0"
tracing-test = "0.2.4"

[patch.crates-io]
native-tls = { git = "https://github.com/gorilla-devs/rust-native-tls", rev = "306030011129dbd973ef7cdb6ebe47f7bec801c1" }
