[workspace]
members = ["crates/*"]
resolver = "2"
exclude = ["crates/iridium"]

[profile.release]
split-debuginfo = "unpacked"

[profile.production]
inherits = "release"
debug = 2
codegen-units = 1
lto = true
opt-level = "s"
split-debuginfo = "unpacked"

[profile.debug-production]
inherits = "release"
debug = 2
codegen-units = 16
opt-level = "s"
incremental = true
debug-assertions = true

[workspace.dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.61"
axum = "0.7.4"
chrono = "0.4.23"
derive_more = "0.99.17"
openssl = { version = "0.10", features = [
  "vendored",
] } # required to vendor openssl for steam deck
directories = "4.0.1"
dotenvy = "0.15.6"
flate2 = "1.0.25"
fs_extra = "1.3.0"
futures = "0.3.25"
httpdate = "1.0.2"
hyper = "0.14.25"
itertools = "0.12"
image = { version = "0.24.5" }
jsonwebtoken = "8.2.0"
# libc = "0.2"
md-5 = "0.10.5"
carbon_scheduler = { git = "https://github.com/gorilla-devs/carbon_scheduler", rev= "4212ac32ca648ceb45e4d8c849360203f96c2be2"}
murmurhash32 = { git = "https://github.com/gorilla-devs/murmurhash32", rev = "4dfdc49b727581bbdcad4a2315452a2c28db6093" }
nom = "7"
num_cpus = "1.16.0"
opener = "0.7.0"
prisma-client-rust = { git = "https://github.com/gorilla-devs/prisma-client-rust", rev = "f74daf611f5ce8c20351eb05014b9176df2f0939", features = [
  "sqlite-create-many",
  "sqlite",
  "migrations",
], default_features = false }
prisma-client-rust-cli = { git = "https://github.com/gorilla-devs/prisma-client-rust", rev = "f74daf611f5ce8c20351eb05014b9176df2f0939", features = [
  "sqlite-create-many",
  "sqlite",
  "migrations",
], default_features = false }
regex = "1.7.0"
const_format = "0.2.32"
reqwest = { version = "0.11.13", default-features = false, features = [
  "json",
  "blocking",
  "stream",
  "rustls-tls",
] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
rspc = "0.2.0"
specta = "1"
rspc-axum = "0.1.1"
serde = "1.0.197"
serde_json = "1.0.114"
daedalus = { git = "https://github.com/gorilla-devs/daedalus", rev = "7f15732f77f2165b8b068421d53dbad67d8def6e" }
sha1 = "0.10.5"
sha2 = "0.10.6"
tar = "0.4.38"
strum_macros = "0.24.3"
strum = "0.24.0"
thiserror = "1.0.38"
task-local-extensions = "0.1.4"
tokio = "1.36.0"
tokio-stream = "0.1.11"
dunce = "1.0.4"
toml = "0.7.3"
tower-http = "0.5.2"
hex = "0.4"
tracing = "0.1.37"
walkdir = "2.3"
tracing-subscriber = { version = "0.3.17", features = ["ansi", "env-filter"] }
tracing-appender = "0.2.2"
# tracing-forest = { version = "0.1.5", features = [
#   "smallvec",
#   "chrono",
#   "tokio",
#   "serde",
#   "env-filter",
# ] }
trash = "4.1.0"
uuid = "1.2.2"
winreg = "0.10.1"
zip = "0.6.3"
tempdir = "0.3.7"
sentry = { version = "0.32.2", default-features = false, features = [
  "panic",
  "contexts",
  "backtrace",
  "reqwest",
  "anyhow",
  "rustls",
] }
syn = "2.0.11"
quote = "1.0.26"
url = "2.3.1"
serde_repr = "0.1"
sysinfo = "0.29.0"
serde_qs = "0.12"
markdown = "1.0.0-alpha.11"
ring = "0.16.20"

# dev dependencies
assert2 = "0.3.11"
flowtest = "0.1.0"
tracing-test = "0.2.4"
