[workspace]
members = ["crates/*"]
resolver = "2"
exclude = ["crates/iridium"]

[profile.release]
split-debuginfo = "unpacked"

[profile.production]
inherits = "release"
debug = 2
codegen-units = 4
lto = "thin"
opt-level = 3
split-debuginfo = "unpacked"

[profile.debug-production]
inherits = "release"
debug = 2
codegen-units = 16
opt-level = "s"
incremental = true
debug-assertions = true

[workspace.dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-stream = "0.3.5"
async-trait = "0.1.61"
axum = "0.7.4"
chrono = "0.4.23"
derive_more = { version = "1.0.0", features = ["display"] }
openssl = { version = "0.10.66", features = [
  "vendored",
] } # required to vendor openssl for steam deck
directories = "5.0.1"
dotenvy = "0.15.6"
flate2 = "1.0.31"
fs_extra = "1.3.0"
futures = "0.3.30"
httpdate = "1.0.2"
hyper = "1.4.1"
itertools = "0.13.0"
image = { version = "0.25.2" }
jsonwebtoken = "9.3.0"
# libc = "0.2"
md-5 = "0.10.5"
carbon_scheduler = { git = "https://github.com/gorilla-devs/carbon_scheduler", rev = "4212ac32ca648ceb45e4d8c849360203f96c2be2" }
murmurhash32 = { git = "https://github.com/gorilla-devs/murmurhash32", rev = "4dfdc49b727581bbdcad4a2315452a2c28db6093" }
nom = "7"
num_cpus = "1.16.0"
opener = "0.7.1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "f71ad9122537c4ed29bf496a4a643947a5fe9aef", features = [
  "sqlite-create-many",
  "sqlite",
  "migrations",
], default_features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "f71ad9122537c4ed29bf496a4a643947a5fe9aef", features = [
  "sqlite-create-many",
  "sqlite",
  "migrations",
], default_features = false }
regex = "1.10.6"
const_format = "0.2.32"
reqwest = { version = "0.12.7", features = [
  "json",
  "blocking",
  "stream",
  "rustls-tls",
] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
rspc = "0.2.0"
specta = "1"
rspc-axum = "0.1.1"
serde = "1.0.204"
serde_json = "1.0.122"
daedalus = { git = "https://github.com/gorilla-devs/daedalus", rev = "3b9d389200a7af060f65b7c814503d7b91359696" }
sha1 = "0.10.6"
sha2 = "0.10.8"
tar = "0.4.41"
strum_macros = "0.24.3"
strum = "0.24.0"
thiserror = "1.0.63"
task-local-extensions = "0.1.4"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.12"
dunce = "1.0.5"
toml = "0.7.3"
tower-http = "0.5.2"
governor = "0.6.3"
hex = "0.4.3"
tracing = "0.1.40"
walkdir = "2.5.0"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }
tracing-appender = "0.2.3"
# tracing-forest = { version = "0.1.5", features = [
#   "smallvec",
#   "chrono",
#   "tokio",
#   "serde",
#   "env-filter",
# ] }
trash = "5.0.0"
uuid = "1.10.0"
winreg = "0.52.0"
zip = "2.1.6"
tempdir = "0.3.7"
tempfile = "3.12.0"
sentry = { version = "0.34.0", features = [
  "panic",
  "contexts",
  "backtrace",
  "reqwest",
  "anyhow",
  "rustls",
] }
syn = "2.0.11"
quote = "1.0.26"
url = "2.3.1"
serde_repr = "0.1"
sysinfo = "0.31.2"
serde_qs = "0.13.0"
markdown = "1.0.0-alpha.11"
ring = "0.17.8"

# dev dependencies
assert2 = "0.3.11"
flowtest = "0.1.0"
tracing-test = "0.2.4"
mockall = "0.13.0"
mockito = "1.5.0"
