[package]
name = "carbon_app"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
sentry = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tracing-test = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tower-http = { workspace = true, default-features = false, features = ["cors"] }
rspc = { workspace = true, features = ["axum", "chrono"] }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
carbon_macro = { path = "../carbon_macro" }
carbon_java_manager = { path = "../carbon_java_manager" }
carbon_compression = { path = "../carbon_compression" }
carbon_domain = { path = "../carbon_domain" }
carbon_net = { path = "../carbon_net" }
uuid = { workspace = true }
prisma-client-rust = { workspace = true, features = [
  "sqlite-create-many",
  "sqlite",
  "migrations",
], default_features = false }
strum_macros = { workspace = true }
strum = { workspace = true }
regex = { workspace = true }
image = { workspace = true, features = ["png"], default-features = false }
# libc = { workspace = true }

# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3.9" }


[dev-dependencies]
tempdir = { workspace = true }
ntest = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
dotenvy = { workspace = true }
