[package]
name = "carbon_app"
version = "0.0.0"
edition = "2021"
author = "GorillaDevs Inc."

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tower-http = { workspace = true, default-features = false, features = ["cors"] }
rspc = { workspace = true, features = ["axum", "chrono"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
const_format = { workspace = true }
# tracing-forest = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
async-stream = { workspace = true }
dunce = { workspace = true }
axum = { workspace = true, features = ["ws"] }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
carbon_macro = { path = "../carbon_macro" }
carbon_compression = { path = "../carbon_compression" }
carbon_net = { path = "../carbon_net" }
uuid = { workspace = true }
prisma-client-rust = { workspace = true, features = [
  "sqlite-create-many",
  "sqlite",
  "migrations",
], default_features = false }
strum_macros = { workspace = true }
strum = { workspace = true }
regex = { workspace = true }
image = { workspace = true }
task-local-extensions = { workspace = true }
hyper = { workspace = true }
zip = { workspace = true }
httpdate = { workspace = true }
daedalus = { workspace = true }
url = { workspace = true }
serde_repr = { workspace = true }
sysinfo = { workspace = true }
iridium = { path = "../iridium", optional = true }
trash = { workspace = true }
toml = { workspace = true }
opener = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
murmurhash32 = { workspace = true }
sha2 = { workspace = true }
itertools = { workspace = true }
fs_extra = { workspace = true }
indexmap = { version = "1.9.3", features = ["serde"] }
tracing-test = "0.2.4"
walkdir = { workspace = true }
async-recursion = "1.0.4"
serde-enum-str = "0.3.2"
markdown = { workspace = true }
ring = { workspace = true }
num_cpus = { workspace = true }
display-info = "0.4.3"
# libc = { workspace = true }
nom = { workspace = true }
carbon_parsing = { path = "../carbon_parsing" }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
# winapi = { version = "0.3.9" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
dotenvy = { workspace = true }
static_vcruntime = { version = "2.0.0" }

[dev-dependencies]
assert2 = { workspace = true }
tempdir = { workspace = true }
flowtest = { workspace = true }
tracing-test = { workspace = true }

[features]
production = ["iridium"]
