[package]
name = "carbon_compression"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
futures = { version = "0.3.25" }
thiserror = "1.0.38"
flate2 = "1.0.25"
zip = "0.6.3"
tar = "0.4.38"