[package]
name = "carbon_compression"
version = "0.0.0"
edition = "2021"
author = "GorillaDevs Inc."

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
