[package]
name = "carbon_core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.37"
futures = { version = "0.3.25" }
thiserror = "1.0.38"