[package]
name = "carbon_domain"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
futures = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
zip = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }
thiserror = { workspace = true }
log = { workspace = true }
trash = { workspace = true }
carbon_net = { path = "../carbon_net" }

[dev-dependencies]
mockall = { workspace = true }
env_logger = { workspace = true }
temp-dir = { workspace = true }
tracing-test = { workspace = true }
