[package]
name = "carbon_java_manager"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "stream"] }
futures = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
carbon_compression = { path = "../carbon_compression" }
carbon_net = { path = "../carbon_net" }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
