[package]
name = "carbon_jre_manager"
version = "0.0.0"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
regex = "1.7.0"
tracing = "0.1.37"
tokio = { version = "1.23.1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json", "stream"] }
futures = { version = "0.3.25" }
sha2 = "0.10.6"
carbon_compression = { path = "../carbon_compression" }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"