[package]
name = "carbon-microsoft_auth"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
jsonwebtoken = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
