[package]
name = "carbon_minecraft"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive", "rc"] }
anyhow = "1.0.51"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["fs"] }
tracing = "0.1.37"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
sha1 = "0.10.5"
futures = { version = "0.3.25" }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
zip = "0.6.3"
lazy_static = "1.4.0"
async-trait = "0.1.60"
uuid = "1.2.2"
thiserror = "1.0.38"
log = "0.4.17"
trash = "3.0.0"
inter-struct = "0.2.0"
dirs = "4.0.0"
carbon_net = { path = "../carbon_net" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "1d1cedd", features = ["sqlite-create-many", "sqlite", "migrations"], default_features = false }


[dev-dependencies]
mockall = "0.11.3"
env_logger = "0.10.0"
temp-dir = "0.1.11"
tracing-test = "0.2.3"