[package]
name = "carbon_net"
version = "0.1.0"
edition = "2021"
author = "GorillaDevs Inc."

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = {workspace = true }
futures = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
