[package]
name = "carbon_repo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
