[package]
name = "java"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive", "rc"] }
serde_json = "1.0.89"
regex = "1.7.0"
tokio = { version = "1.22.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"