[package]
name = "java"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive", "rc"] }
serde_json = "1.0.89"
regex = "1.7.0"
tokio = { version = "1.22.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json", "stream"] }
futures = { version = "0.3.25" }
sha2 = "0.10.6"
async_zip = { git = "https://github.com/Majored/rs-async-zip.git", features = ["deflate", "bzip2", "lzma", "xz", ] }
sanitize-filename = "0.4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"