[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"
author = "GorillaDevs Inc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli = { workspace = true, features = [
    "sqlite-create-many",
    "sqlite",
    "migrations",
], default_features = false }
